crates/riri-nce/tests/snapshots/cli_snapshots__yarn_up_to_date_verbose_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected yarn.lock
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Scanned node_modules
  Computing engine constraints...
  Computed engine constraints
  warning: node 16 reached end-of-life on 2023-09-11

  All computed engines range constraints are up-to-date :)
